Se cambio el color de las fuentes

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,8 +1,8 @@
 :root {
-  --gray40: #212121;
-  --gray30: #212429;
-  --gray20: #424242;
-  --gray10: #616161;
+  --gray40: #000770;
+  --gray30: #003ba1;
+  --gray20: #3e50f3;
+  --gray10: #7877db;
   --headline1: 'Georgina';
 }
 
