Cambio del tipo de fuente de letra nuevamente

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -3,7 +3,7 @@
   --gray30: #003ba1;
   --gray20: #3e50f3;
   --gray10: #7877db;
-  --headline1: 'Georgina';
+  --headline1: 'Century Gothic';
 }
 
 html {
