--- a/css/estilos.css
+++ b/css/estilos.css
@@ -23,7 +23,7 @@ body {
 
 .hero {
   background-image: linear-gradient(to top, #7a2cbf9d, transparent), url(../img/fondohero2.png);
-  /* background-image: linear-gradient(to top, #7a2cbf9d, transparent), url(../img/webdeveloper.jpg); */
+  /* background-image: linear-gradient(to top, #7a2cbf9d, transparent), url(../img/webdeveloper2.jpeg); */
   background-repeat: no-repeat;
   background-position: center;
   background-size: 100%;
