--- a/css/estilos.css
+++ b/css/estilos.css
@@ -143,7 +143,7 @@ nav details summary {
 }
 
 pre {
-  background-color: #875acf;
+  background-color: #FEC62E;
   padding-block-start: 40px;
   padding-block-end: 40px;
   padding-inline-start: 40px;
