se acomodo la imegen del logo principal

--- a/mode_dark/css/estilos.css
+++ b/mode_dark/css/estilos.css
@@ -23,7 +23,7 @@ body {
 }
 
 .hero {
-  background-image: linear-gradient(to top, #314755, transparent), url(../img/fondohero2.png);
+  background-image: linear-gradient(to top, #314755, transparent), url(../img/fondohero.png);
   /* background-image: linear-gradient(to top, #7a2cbf9d, transparent), url(../img/webdeveloper2.jpeg); */
   background-repeat: no-repeat;
   background-position: center;
